5_net-pol/yaml/allow-c.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-c
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: busybox-a
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: kube-system
          podSelector:
            matchLabels:
              app: busybox-c
